force-app/main/default/objects/StudentTerm__c/StudentTerm__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the previous, current, and future term.</description>
    <label>StudentTerm</label>
</CustomObject>