force-app/main/default/objects/StudentTerm__c/fields/CurrTerm__c.field-meta.xml
<CustomField>
    <fullName>CurrTerm__c</fullName>
    <description>Current Term at ASU</description>
    <inlineHelpText>Previous → CURRENT TERM → Next → Future</inlineHelpText>
    <label>CurrTerm</label>
    <length>4</length>
    <type>Text</type>
</CustomField>