force-app/main/default/objects/StudentTerm__c/fields/FutureTerm__c.field-meta.xml
<CustomField>
    <fullName>FutureTerm__c</fullName>
    <description>The term following the term after the current term.</description>
    <inlineHelpText>Previous → Current → Next → FUTURE TERM</inlineHelpText>
    <label>FutureTerm</label>
    <length>4</length>
    <type>Text</type>
</CustomField>