force-app/main/default/objects/StudentTerm__c/fields/NextTerm__c.field-meta.xml
<CustomField>
    <fullName>NextTerm__c</fullName>
    <description>Next Term Coming up</description>
    <inlineHelpText>Previous → Current → NEXT TERM → Future</inlineHelpText>
    <label>NextTerm</label>
    <length>4</length>
    <type>Text</type>
</CustomField>