force-app/main/default/objects/StudentTerm__c/fields/PrevTerm__c.field-meta.xml
<CustomField>
    <fullName>PrevTerm__c</fullName>
    <description>Previous term at ASU</description>
    <inlineHelpText>PREVIOUS TERM → Current → Next → Future</inlineHelpText>
    <label>PrevTerm</label>
    <length>4</length>
    <type>Text</type>
</CustomField>